reports/smoke/macOS-Debug-Gargantua/build_log.txt
[  0%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/libMeshb/sources/libmeshb7.c.o
[  1%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/rply/rply.c.o
[  1%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/adler32.c.o
[  2%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/compress.c.o
[  2%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/crc32.c.o
[  3%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/deflate.c.o
[  3%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/gzclose.c.o
[  4%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/gzlib.c.o
[  4%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/gzread.c.o
[  5%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/gzwrite.c.o
[  5%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/inffast.c.o
[  6%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/inflate.c.o
[  6%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/inftrees.c.o
[  7%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/trees.c.o
[  7%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/uncompr.c.o
[  8%] Building C object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/zlib/zutil.c.o
[  8%] Building CXX object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/PoissonRecon/Factor.cpp.o
[  9%] Building CXX object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/PoissonRecon/Geometry.cpp.o
[  9%] Building CXX object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/PoissonRecon/MarchingCubes.cpp.o
[ 10%] Building CXX object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/PoissonRecon/poisson_geogram.cpp.o
[ 10%] Building CXX object src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/xatlas/xatlas.cpp.o
In file included from /Users/runner/work/geogram/geogram/src/lib/geogram/third_party/PoissonRecon/poisson_geogram.cpp:40:
In file included from /Users/runner/work/geogram/geogram/src/lib/geogram/third_party/PoissonRecon/poisson_geogram.h:47:
In file included from /Users/runner/work/geogram/geogram/src/lib/geogram/basic/geometry.h:44:
In file included from /Users/runner/work/geogram/geogram/src/lib/geogram/basic/matrix.h:44:
/Users/runner/work/geogram/geogram/src/lib/geogram/basic/vecg.h:564:38: error: use of undeclared identifier 'DIM'
                geo_debug_assert(i < DIM);
                                     ^
/Users/runner/work/geogram/geogram/src/lib/geogram/basic/vecg.h:779:38: error: use of undeclared identifier 'DIM'
                geo_debug_assert(i < DIM);
                                     ^
/Users/runner/work/geogram/geogram/src/lib/geogram/basic/vecg.h:1010:38: error: use of undeclared identifier 'DIM'
                geo_debug_assert(i < DIM);
                                     ^
In file included from /Users/runner/work/geogram/geogram/src/lib/geogram/third_party/PoissonRecon/poisson_geogram.cpp:62:
In file included from /Users/runner/work/geogram/geogram/src/lib/geogram/third_party/PoissonRecon/PPolynomial.h:32:
In file included from /Users/runner/work/geogram/geogram/src/lib/geogram/third_party/PoissonRecon/Polynomial.h:99:
/Users/runner/work/geogram/geogram/src/lib/geogram/third_party/PoissonRecon/Polynomial.inl:301:47: warning: array index 3 is past the end of the array (which contains 3 elements) [-Warray-bounds]
                case 3: _rCount = Factor(                   coefficients[3] , coefficients[2] , coefficients[1] , coefficients[0]-c , _roots , EPS ) ; break;
                                                            ^            ~
/Users/runner/work/geogram/geogram/src/lib/geogram/third_party/PoissonRecon/MultiGridOctreeData.IsoSurface.inl:1014:48: note: in instantiation of member function 'Polynomial<2>::getSolutions' requested here
                int rCount = 0 , rootCount = P.getSolutions( isoValue , roots , EPSILON );
                                               ^
/Users/runner/work/geogram/geogram/src/lib/geogram/third_party/PoissonRecon/MultiGridOctreeData.IsoSurface.inl:407:57: note: in instantiation of function template specialization 'Octree<double>::GetIsoVertex<2, 1, PlyVertex<double>>' requested here
                                                        GetIsoVertex( colorBSData , densityWeights , colorData , isoValue , weightKey , colorKey , leaf , e , z , sValues , vertex );
                                                        ^
/Users/runner/work/geogram/geogram/src/lib/geogram/third_party/PoissonRecon/MultiGridOctreeData.IsoSurface.inl:366:32: note: in instantiation of function template specialization 'Octree<double>::SetSliceIsoVertices<2, 1, PlyVertex<double>>' requested here
        if( slice>0          ) SetSliceIsoVertices< WeightDegree , ColorDegree, Vertex >( colorBSData , densityWeights , colorData , isoValue , depth , slice , 1 , vOffset , mesh , slabValues , threads );
                               ^
/Users/runner/work/geogram/geogram/src/lib/geogram/third_party/PoissonRecon/MultiGridOctreeData.IsoSurface.inl:182:17: note: in instantiation of function template specialization 'Octree<double>::SetSliceIsoVertices<2, 1, PlyVertex<double>>' requested here
                SetSliceIsoVertices< WeightDegree , ColorDegree, Vertex >( colorBSData , densityWeights , colorData , isoValue , d , 0 , vertexOffset , mesh , slabValues , threads );
                ^
/Users/runner/work/geogram/geogram/src/lib/geogram/third_party/PoissonRecon/poisson_geogram.cpp:299:14: note: in instantiation of function template specialization 'Octree<double>::GetMCIsoSurface<2, 2, 1, PlyVertex<double>>' requested here
        tree.GetMCIsoSurface< Degree , WEIGHT_DEGREE , DATA_DEGREE >(
             ^
/Users/runner/work/geogram/geogram/src/lib/geogram/third_party/PoissonRecon/Polynomial.h:40:2: note: array 'coefficients' declared here
        double coefficients[Degree+1];
        ^
1 warning and 3 errors generated.
make[2]: *** [src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/PoissonRecon/poisson_geogram.cpp.o] Error 1
make[1]: *** [src/lib/geogram/third_party/CMakeFiles/geogram_third_party.dir/all] Error 2
make: *** [all] Error 2
